--- a/app/views/admin/admin/dashboard.html.haml
+++ b/app/views/admin/admin/dashboard.html.haml
@@ -1,2 +1,6 @@
-%h1 Dashboard
-%p There will be some metrics and links here
+.row
+  .col-md-2
+  .col-md-8
+    %h1 Dashboard
+    %p There will be some metrics and links here
+  .col-md-2
