--- a/app/views/admin/posts/index.html.haml
+++ b/app/views/admin/posts/index.html.haml
@@ -19,6 +19,6 @@
             %td= post.author.full_name
             %td= post.comments.count
             %td
-              = link_to raw('<i class="icon-edit"></i>'), edit_admin_post_path(post)
-              = link_to raw('<i class="icon-trash"></i>'), admin_post_path(post), :method => :delete, :data => { :confirm => 'Are you sure?' }
+              = link_to raw('<i class="fa fa-edit"></i>'), edit_admin_post_path(post)
+              = link_to raw('<i class="fa fa-trash-o"></i>'), admin_post_path(post), :method => :delete, :data => { :confirm => 'Are you sure?' }
   .col-md-1
