--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,12 +6,13 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    = image_tag 'logo.png', alt: 'Tiny Robot Army'
+    .top-bar
+    = image_tag 'logo.png', alt: 'Tiny Robot Army', class: 'logo'
     %nav
       %ol.unstyled
-        %li= link_to icon_link_label('icon-home', t('.home')), '/'
-        %li= link_to icon_link_label('icon-envelope', t('.contact_us')), '/contact'
-        %li= link_to icon_link_label('icon-rss', t('.blog')), blog_path
+        %li= link_to icon_link_label('home', t('.home')), '/'
+        %li= link_to icon_link_label('envelope', t('.contact_us')), '/contact'
+        %li= link_to icon_link_label('rss', t('.blog')), blog_path
         %li= admin_link current_user
         - if App.allow_sign_in
           %li= sign_in_out current_user
