--- a/app/views/admin/categories/index.html.haml
+++ b/app/views/admin/categories/index.html.haml
@@ -22,6 +22,6 @@
             %td= truncate(category.description, length: 20)
             %td= category.posts.count
             %td
-              = link_to raw('<i class="icon-edit"></i>'), edit_admin_category_path(category)
-              = link_to raw('<i class="icon-trash"></i>'), admin_category_path(category), :method => :delete, :data => { :confirm => 'Are you sure?' }
+              = link_to raw('<i class="fa fa-edit"></i>'), edit_admin_category_path(category)
+              = link_to raw('<i class="fa fa-trash-o"></i>'), admin_category_path(category), :method => :delete, :data => { :confirm => 'Are you sure?' }
   .col-md-1
