--- a/app/views/home/contact.html.haml
+++ b/app/views/home/contact.html.haml
@@ -1,7 +1,11 @@
-%dl.dl-horizontal
-  %dt email
-  %dd= link_to 'adam@tinyrobotarmy.net', 'mailto:adam@tinyrobotarmy.net'
-  %dt mobile
-  %dd +61 457 741 117
-  %dt skype
-  %dd adam.boas
+.row
+  .col-md-2
+  .col-md-8
+    %dl.dl-horizontal
+      %dt email
+      %dd= link_to 'adam@tinyrobotarmy.net', 'mailto:adam@tinyrobotarmy.net'
+      %dt mobile
+      %dd +61 457 741 117
+      %dt skype
+      %dd adam.boas
+  .col-md-2
