Little bit of cleaning up of admin screens

--- a/app/views/admin/categories/index.html.haml
+++ b/app/views/admin/categories/index.html.haml
@@ -4,7 +4,7 @@
     %h1
       Categories
       %small.pull-right
-        = link_to 'Create', new_admin_category_path, class: 'btn btn-primary'
+        = link_to 'New Category', new_admin_category_path, class: 'btn btn-primary'
 
     %table.table.table-striped
       %thead
