--- a/app/views/admin/categories/show.html.haml
+++ b/app/views/admin/categories/show.html.haml
@@ -3,7 +3,7 @@
   .col-md-10
     = content_for :message_box do
       = notice
-
+    %h1 Category
     %dl.dl-horizontal
       %dt Name
       %dd= @category.title
