--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,9 +13,11 @@
         %li= link_to icon_link_label('home', t('.home')), '/'
         %li= link_to icon_link_label('envelope', t('.contact_us')), '/contact'
         %li= link_to icon_link_label('rss', t('.blog')), blog_path
-        %li= admin_link current_user
         - if App.allow_sign_in
-          %li= sign_in_out current_user
+          %li= raw sign_in_out(current_user)
+        - if App.allow_sign_up && ! current_user
+          %li= link_to raw(sign_up_label), new_user_registration_path
+        %li= admin_link current_user
     = message_box(yield(:message_box))
     .container-fluid.outer
       = yield
