--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -39,6 +39,28 @@
     }
   }
 
+  .comment-count {
+    float: left;
+  }
+  .comments-heading {
+    margin-top: 2em;
+    text-align: right;
+    padding: 0.25em 1em;
+    height: 3.25em;
+    border-bottom: 1px solid $grey;
+    color: $primary_colour;
+    background-color: $light_grey;
+  }
+
+  ul.comments li {
+    margin-top: 1em;
+    .posted {
+      background-color: $light_grey;
+      padding: 0.5em;
+      border-bottom: 1px solid $grey;
+    }
+  }
+
   h3 {
     border-bottom: 6px solid #999;
     line-height: 1.5em;
