--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -26,7 +26,7 @@
       color: #999 ;
       text-align: center;
       padding: 0.1em 0.5em;
-      margin: -0.45em 0 0 -0.25em;
+      margin: -0.45em 0.25em 0 -0.25em;
       background-color: #fff;
       border: 1px solid $light_grey;
       box-shadow: 2px 2px 8px $grey;
