--- a/app/views/shared/_comment.html.haml
+++ b/app/views/shared/_comment.html.haml
@@ -1,4 +1,4 @@
 %li.comment
   = comment.body
   .posted
-    = t '.author', {author: comment.post.author.first_name, ago: time_ago_in_words(comment.created_at)}
+    = t '.author', {author: comment.author.first_name, ago: time_ago_in_words(comment.created_at)}
