All specs working except rss and bootstrap link renderer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@ $red: #ea0001;
 body {
   position:relative;
   font-family: "Andale Mono", AndaleMono, monospace;
-  font-size: 3em;
+  // font-size: 3em;
 }
 
 @media (min-width: 768px) and (orientation: landscape) {
