--- a/app/assets/stylesheets/_message_box.scss
+++ b/app/assets/stylesheets/_message_box.scss
@@ -1,3 +1,4 @@
+@import "colours";
 .message-box {
   display:none;
   text-align: center;
@@ -14,12 +15,10 @@
 .notice {
   background-color:#D1EED1;
   color:$notice_colour;
-  @include border-radius(3px);
 }
 
 .alert, #error_explanation {
   background-color: #fddfde;
-  @include border-radius(3px);
 }
 
 .alert h2, #error_explanation h2 {
